--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "core-js": "^3.8.3",
     "galaxyzz-ui": "^1.0.0",
     "vue": "^2.6.14",
-    "vue-router": "^4.1.6"
+    "vue2-editor": "^2.10.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -22,6 +22,9 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "less": "^4.1.3",
+    "less-loader": "^7.3.0",
+    "vue-router": "^3.1.2",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
